schema/testdata/errors/enum_default_wrong_type.keel
model Post {
    fields {
        //expect-error:32:39:AttributeExpressionError:expression expected to resolve to type PostType but it is Text
        type PostType @default("Draft")
    }
}

enum PostType {
    Draft
    Published
}
